tests/paczka1/fuzzy1/16723834.err
Error in line 1: iq5S8tP S217 71,1
Error in line 2: ZJG S504 39,0
Error in line 8: ZJG A49 31,7
Error in line 5: 34socyQNw A40 18,9
Error in line 20: KgSibjnFDc S217 61,26
Error in line 22: KgSibjnFDc S217 6,8
Error in line 29: A49 S504 10,1
